--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -168,7 +168,7 @@
     font-size: 24px;
     cursor: pointer;
     display: none;
-    margin-right: 30px;
+    margin-right: -10px;
 }
 
 
@@ -203,7 +203,9 @@
     padding: 12px 16px;
     border-radius: 6px;
     cursor: pointer;
+    font-size:15px;
     transition: all 0.2s ease;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .mobile-nav-item.has-dropdown {
@@ -212,7 +214,7 @@
 
 .mobile-nav-text {
     margin-left: 12px;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 
@@ -367,19 +369,11 @@ mobile-dropdown-light .mobile-dropdown-item {
 
 
 /* Mobile Controls */
-.mobile-controls {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    margin-left: auto;
-}
-
 .mobile-theme-switch-container {
     display: flex;
     align-items: center;
+    margin-top:2px;
 }
-
-
 
 .mobile-menu-button {
     background: none;
@@ -642,7 +636,7 @@ mobile-dropdown-light .mobile-dropdown-item {
     }
 
     .mobile-theme-switch {
-        margin-right: 8px;
+        margin-right: -5px;
     }
 
     .notification-drawer {
