--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -3,23 +3,67 @@
     white-space: nowrap;
 }
 
+/* Base mobile-first styles (shows 3 items by default) */
 .button-container {
     display: flex;
-    gap: 1rem;
+    overflow-x: auto;
+    gap: 12px;
+    padding-bottom: 10px;
 }
 
+.service-widget {
+    flex: 0 0 calc(33.333% - 12px);
+    /* 3 items */
+}
+
+/* Progressive enhancement - works alongside JS */
+@media (min-width: 500px) {
+    .service-widget {
+        flex: 0 0 calc(20% - 12px);
+        /* 5 items */
+    }
+}
+
+@media (min-width: 650px) {
+    .service-widget {
+        flex: 0 0 calc(14.285% - 12px);
+        /* 7 items */
+    }
+}
+
+@media (min-width: 800px) {
+    .service-widget {
+        flex: 0 0 calc(12.5% - 12px);
+        /* 8 items */
+    }
+}
+
+@media (min-width: 1000px) {
+    .button-container {
+        flex-wrap: wrap;
+        overflow-x: visible;
+    }
+
+    .service-widget {
+        flex: 0 0 auto;
+        /* All items visible */
+    }
+}
 .service-btn {
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 5px;
     width: 70px;
     height: 70px;
-    background-color: #000;
-    color: white;
-    border: none;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 5px;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
     white-space: normal;
 }
 
@@ -40,9 +84,26 @@
     display: flex;
 }
 
-.quickAction {
+.quickAction{
     color: #000;
     font-size: 13px;
     font-weight: 600;
     margin-bottom: 5px;
+}
+.QR5Jd {
+    background-color: rgb(222, 222, 237);
+    width: 100%;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(222, 222, 237);
+    border-image: initial;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0px;
+}
+@media (max-width: 1068px) {
+    .service-btn {
+        padding: 10px;
+        width: 70px;
+    }
 }
