--- a/src/components/WalletBoard.css
+++ b/src/components/WalletBoard.css
@@ -1,5 +1,5 @@
 .wallet_board_container{
-    margin-top:70px
+    margin-top:70px;
 }
 .review-container {
     display: flex;
@@ -74,7 +74,9 @@
 }
 
 .bal-amount {
-    font-size: 1.2em;
+    font-size: calc(1.2125rem + .75vw);
+    color: #2d7a22 !important;
+    font-weight: bold;
 }
 
 .balance-eye-icon {
@@ -88,7 +90,7 @@
     margin-left: 10px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1199px) {
     .wallet-card .balance .wallet-card .balance {
         display: block;
         margin: 0 auto;
@@ -107,7 +109,7 @@
     }
 
     .bal-amount {
-        font-size: 30px;
+        font-size: 23px;
     }
 
     .currency-button {
@@ -156,43 +158,7 @@
 .container-md {
     max-width: 1250px
 }
-.color-dark{
-    color: #fff !important;
-}
-.color-light {
-    color: #000 !important;
-}
-.container-dark {
-    background-color: #ffffff;
-    color: #000 !important;
-    border-left: 1px solid #e0e0e0;
-}
-.container-light {
-    background-color: #1f2937;
-    color: #fff !important;
-    border-bottom-color: #374151;
-}
 
-
-
-.button-dark {
-    background-color: #1f2937;
-    color: #fff !important;
-}
-
-.button-light{
-    background-color: #fff;
-    color: #000 !important;
-}
-
-.text-dark {
-    color: #fff !important;
-}
-
-.text-light {
-   
-    color: #000 !important;
-}
 .card-body {
     padding: 8.5rem 1.875rem 1.25rem
 }
@@ -218,6 +184,9 @@
     color: #333;
     font-size: 18px;
     margin-right: 10px;
+    border:2px solid rgba(0, 128, 0, 0.169);
+    border-radius: 50%;
+
 }
 .user-name-out{
     font-weight: 600;
@@ -232,7 +201,7 @@
 
 .balance-icon-btn {
     padding: 0;
-    margin-left: 8px;
+    margin-left: 10px;
 }
 
 .balance-icon {
@@ -256,7 +225,7 @@
     padding: 40px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1199px) {
     .itemContainer {
             justify-content: center;
             /* centers all items in container */
@@ -268,6 +237,9 @@
         }
     .items {
         margin: 10px 0;
+    }
+    .currency-button {
+        width: 175px !important;
     }
 }
 .pad {
@@ -285,13 +257,26 @@
     border-radius: 7px;
     width: auto;
 }   
-
+.eye-control {
+    margin-left:60px !important;
+}
 .card-body {
     padding: 1.5rem 1.875rem 1.25rem;
 }
-@media (max-width: 768px) {
+.active-in-white{
+    color:#333 !important;
+}
+@media (max-width: 1199px) {
     .card {
         display: block;
+    }
+    .balance-icon-btn{
+        top: 30px;
+    }
+    .eye-control{
+        margin:0 !important;
+        justify-content: center;
+        text-align: center;
     }
 }
 
@@ -329,9 +314,10 @@
 
 /* Light mode */
 .currency-button.light {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #eee;
+    color: var(--ck-color-resizer-tooltip-background);
     border-color: #ccc;
+    border-radius: 20px;
 }
 
 .currency-button.light:hover {
@@ -340,11 +326,131 @@
 
 /* Dark mode */
 .currency-button.dark {
-    background-color: #1f1f1f;
+    background-color: #bbf31e17;
     color: #ffffff;
     border-color: #444;
+    border-radius: 20px;
 }
 
 .currency-button.dark:hover {
-    background-color: #333333;
+    background-color: #bbf31e17;
+}
+.color-dark {
+    color: #fff !important;
+}
+
+.color-light {
+    color: #fff !important;
+}
+
+.container-dark {
+    background-color: #fff;
+    color: #000 !important;
+    border-left: 1px solid #fff;
+}
+
+.container-light {
+    background-color: #1f2937;
+    color: #fff !important;
+    border-bottom-color: #374151;
+}
+
+.button-dark {
+    background-color: #1f2937;
+    color: #fff !important;
+}
+
+.button-light {
+    background-color: #fff;
+    color: #000 !important;
+}
+
+.text-dark {
+    color: #fff !important;
+}
+
+.text-light {
+
+    color: #000 !important;
+}
+
+.wallet-footer .item {
+    flex: 1;
+    text-align: center;
+}
+.wallet-footer .item a {
+    display: block;
+}
+
+.wallet-footer .item .icon-wrapper {
+    background: #6236FF;
+    width: 48px;
+    height: 48px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 24px;
+    margin-bottom: 14px;
+}
+
+.wallet-footer .item .icon-wrapper {
+    width: 48px;
+    height: 48px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 24px;
+    margin-bottom: 14px;
+}
+
+.wallet-footer {
+    padding-top: 20px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.exchange-button-bg-dark-mode-color{
+    --bs-bg-opacity: 1;
+    background-color: var(--ck-accessibility-help-dialog-kbd-shadow-color) !important;
+}
+.exchange-button-bg-light-mode-color{
+    background:var(--rgba-primary-9) !important;
+}
+
+
+.card {
+
+    margin-top: 30px;
+    position: relative;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border-radius: 10px;
+    width: auto;
+}
+
+.pad {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media (max-width: 1199px) {
+    .card {
+        display: block;
+    }
+
+    .card {
+        margin-top: 0;
+    }
+
+    .pad {
+        display: block;
+    }
 }
