--- a/src/app/Wallet.css
+++ b/src/app/Wallet.css
@@ -166,6 +166,7 @@
     margin-bottom: 20px;
     padding-top: 35px;
     padding-bottom: 35px;
+    height:180px;
 }
 
 .balance-info span {
@@ -338,7 +339,7 @@
  }
  .hide-amount {
     font-size: 12px !important;
-    margin-top: -9px !important;
+    margin-top: 0px !important;
 }
 @media (max-width: 1199px) {
     .balance-actions {
