--- a/src/components/modal/FiatModal.css
+++ b/src/components/modal/FiatModal.css
@@ -1,15 +1,15 @@
 .modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  padding-top: 80px;
-  z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding-top: 80px;
+    z-index: 9999;
 }
 
 .modal-header {
@@ -26,6 +26,7 @@
     transform: translateX(-50%);
     margin: 0;
 }
+
 .modal-container {
     background: #fff;
     border-radius: 8px;
@@ -54,7 +55,7 @@
     cursor: pointer;
     color: var(--bs-secondary-color);
     border: 0px;
-} 
+}
 
 .confirm-btn {
     background: #28a745;
@@ -67,6 +68,65 @@
 
 .confirm-btn:hover {
     background: #218838;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.has-search .form-control {
+    padding-left: 2.375rem;
+}
+
+input.form-control {
+    position: relative;
+}
+
+.search-banks {
+    width: 100% !important;
+}
+
+.form-control {
+    color: var(--text);
+    line-height: 1.7;
+    font-size: 0.9rem;
+    height: 2.75rem;
+    background: var(--card);
+    border-color: var(--border);
+    border-radius: 0.5rem;
+    padding: 0.375rem 0.75rem;
+    border: var(--bs-border-width) solid #EEEEEE;
+    appearance: none;
+    font-weight: 400;
+    display: block;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: rgb(170, 170, 170);
+    top: 2px;
+}
+
+.bank-container-list {
+    max-height: 250px;
+    overflow-y: auto;
+    padding: 10px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(221, 221, 221);
+    border-image: initial;
+}
+
+.text-center {
+    text-align: center !important;
 }
 
 @keyframes fadeIn {
